force-app/main/default/objects/Student_Fee__c/Student_Fee__c.object-meta.xml
<CustomObject>
    <label>Student Fee</label>
    <nameField>
        <label>Student Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Fees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>