force-app/main/default/objects/Student_Fee__c/fields/Academic_Fee__c.field-meta.xml
<CustomField>
    <fullName>Academic_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic Fee</label>
    <type>Checkbox</type>
</CustomField>