force-app/main/default/objects/Student_Fee__c/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <formula>Contact__r.Primary_Academic_Program__r.Name</formula>
    <label>Academic Program</label>
    <type>Text</type>
</CustomField>