force-app/main/default/objects/Student_Fee__c/fields/Active_Sem__c.field-meta.xml
<CustomField>
    <fullName>Active_Sem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Sem</label>
    <type>Checkbox</type>
</CustomField>