force-app/main/default/objects/Student_Fee__c/fields/Active_Semester__c.field-meta.xml
<CustomField>
    <fullName>Active_Semester__c</fullName>
    <formula>Contact__r.Active_Semester__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Semester</label>
    <type>Text</type>
</CustomField>