force-app/main/default/objects/Student_Fee__c/fields/Actual_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_Program_Fee__c</fullName>
    <description>Actual program fee - 1st year</description>
    <label>Actual Program Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>