force-app/main/default/objects/Student_Fee__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>seat blocking paid - 1st year</description>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>