force-app/main/default/objects/Student_Fee__c/fields/Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pending__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Balance fee to be paid - 1st year</description>
    <label>Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>