force-app/main/default/objects/Student_Fee__c/fields/Calculated_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Amount_Pending__c</fullName>
    <formula>Calculated_Total_Amount__c - Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated_Total_Amount__c - Amount_Paid__c</inlineHelpText>
    <label>Calculated Amount Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>