force-app/main/default/objects/Student_Fee__c/fields/Calculated_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Total_Amount__c</fullName>
    <formula>Actual_Program_Fee__c + Premium__c - Concession__c - Scholarship__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is SF Calculated Value.
Actual_Program_Fee__c + Premium__c - Concession__c - Scholarship__c</inlineHelpText>
    <label>Calculated Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>