force-app/main/default/objects/Student_Fee__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Fee_Master__c</referenceTo>
    <relationshipLabel>Student Fees (Scholarship Category)</relationshipLabel>
    <relationshipName>Student_Fees1</relationshipName>
    <type>Lookup</type>
</CustomField>