force-app/main/default/objects/Student_Fee__c/fields/CGPA_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>CGPA_Eligibility__c</fullName>
    <label>CGPA Eligibility</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>