force-app/main/default/objects/Student_Fee__c/fields/Concession__c.field-meta.xml
<CustomField>
    <fullName>Concession__c</fullName>
    <description>Fee waiver/concession - 1st year</description>
    <label>Concession</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>