force-app/main/default/objects/Student_Fee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Map Based on Application Number / SRN Number</description>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Non Teaching, Student, Applicant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Fees</relationshipLabel>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>