force-app/main/default/objects/Student_Fee__c/fields/Counselor_Name__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Name__c</fullName>
    <label>Counselor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aman V C</fullName>
            </value>
            <value>
                <fullName>Ashika R</fullName>
            </value>
            <value>
                <fullName>Fariha F</fullName>
            </value>
            <value>
                <fullName>Jabeen Taj</fullName>
            </value>
            <value>
                <fullName>Meghana V V</fullName>
            </value>
            <value>
                <fullName>Padma Dayanand</fullName>
            </value>
            <value>
                <fullName>Raziya Sultana</fullName>
            </value>
            <value>
                <fullName>Shruthi s</fullName>
            </value>
            <value>
                <fullName>Sidaram</fullName>
            </value>
            <value>
                <fullName>Sujatha R</fullName>
            </value>
            <value>
                <fullName>Sunitha K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>