force-app/main/default/objects/Student_Fee__c/fields/Course_Name_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Name_Course_Code__c</fullName>
    <label>Course Name / Course Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>