force-app/main/default/objects/Student_Fee__c/fields/Create_penalty_record__c.field-meta.xml
<CustomField>
    <fullName>Create_penalty_record__c</fullName>
    <formula>IF(
    TODAY() =  Hostel_Due_Date__c + 1,
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create penalty record</label>
    <type>Checkbox</type>
</CustomField>