force-app/main/default/objects/Student_Fee__c/fields/Date_of_Joining_Hostel__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining_Hostel__c</fullName>
    <label>Date of Joining Hostel</label>
    <type>Date</type>
</CustomField>