force-app/main/default/objects/Student_Fee__c/fields/Demand_Number__c.field-meta.xml
<CustomField>
    <fullName>Demand_Number__c</fullName>
    <label>Demand Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>