force-app/main/default/objects/Student_Fee__c/fields/Display_No__c.field-meta.xml
<CustomField>
    <fullName>Display_No__c</fullName>
    <label>Display No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>