force-app/main/default/objects/Student_Fee__c/fields/Eligibility_Attendance1__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Attendance1__c</fullName>
    <label>Eligibility  Attendance1</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>