force-app/main/default/objects/Student_Fee__c/fields/Eligibility_Attendance2__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Attendance2__c</fullName>
    <label>Eligibility Attendance 2</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>