force-app/main/default/objects/Student_Fee__c/fields/Exam_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Exam_Application_Number__c</fullName>
    <externalId>true</externalId>
    <label>Exam Application Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>