force-app/main/default/objects/Student_Fee__c/fields/Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>Excess_Amount__c</fullName>
    <label>Excess Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>