force-app/main/default/objects/Student_Fee__c/fields/Exclude_Late_Fee_Charges_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Late_Fee_Charges_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Late Fee Charges - Fee</label>
    <type>Checkbox</type>
</CustomField>