force-app/main/default/objects/Student_Fee__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <formula>Contact__r.School__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faculty</label>
    <type>Text</type>
</CustomField>