force-app/main/default/objects/Student_Fee__c/fields/Father_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Father_Email_ID__c</fullName>
    <label>Father Email ID</label>
    <type>Email</type>
</CustomField>