force-app/main/default/objects/Student_Fee__c/fields/Father_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_Mobile_Number__c</fullName>
    <label>Father Mobile Number</label>
    <type>Phone</type>
</CustomField>