force-app/main/default/objects/Student_Fee__c/fields/Fee_Category__c.field-meta.xml
<CustomField>
    <fullName>Fee_Category__c</fullName>
    <label>Fee Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>