force-app/main/default/objects/Student_Fee__c/fields/Fee_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_Name__c</fullName>
    <formula>HYPERLINK (&quot;https://reva-university.lightning.force.com/lightning/r/Student_Fee__c/&quot; + Id +&quot;/view&quot; , Name +&apos;-&apos;+  Contact__r.Student_Full_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Name</label>
    <type>Text</type>
</CustomField>