force-app/main/default/objects/Student_Fee__c/fields/Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid__c</fullName>
    <formula>IF( Calculated_Amount_Pending__c  = 0, &apos;Paid&apos;, IF(Calculated_Amount_Pending__c &lt;&gt; 0 &amp;&amp;  Amount_Paid__c &lt;&gt; 0, &apos;Partly Paid&apos;, &apos;Pending&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Paid</label>
    <type>Text</type>
</CustomField>