force-app/main/default/objects/Student_Fee__c/fields/Fee_Payment_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Fee_Payment_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Payment Criteria</label>
    <referenceTo>Fee_Payment_Criteria__c</referenceTo>
    <relationshipLabel>Student Fees</relationshipLabel>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>