force-app/main/default/objects/Student_Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Examination &amp; Valuation Fee</fullName>
            </value>
            <value>
                <fullName>Hostel Fee</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Fee</fullName>
            </value>
            <value>
                <fullName>Transportation Fee</fullName>
            </value>
            <value>
                <fullName>University Fee</fullName>
            </value>
            <value>
                <fullName>Tuition Fee</fullName>
            </value>
            <value>
                <fullName>Academic Fee</fullName>
            </value>
            <value>
                <fullName>Application Fee</fullName>
            </value>
            <value>
                <fullName>Missed Meal Fee</fullName>
            </value>
            <value>
                <fullName>Penalty Fee</fullName>
            </value>
            <value>
                <fullName>Guest House Fee</fullName>
            </value>
            <value>
                <fullName>Tuition Fee 1st Year</fullName>
                <isActive>false</isActive>
                <label>Tuition Fee 1st Year</label>
            </value>
            <value>
                <fullName>Tuition Fee 2nd Year</fullName>
                <isActive>false</isActive>
                <label>Tuition Fee 2nd Year</label>
            </value>
            <value>
                <fullName>Tuition Fee 3rd Year</fullName>
                <isActive>false</isActive>
                <label>Tuition Fee 3rd Year</label>
            </value>
            <value>
                <fullName>Tuition Fee 4th Year</fullName>
                <isActive>false</isActive>
                <label>Tuition Fee 4th Year</label>
            </value>
            <value>
                <fullName>Tuition Fee 5th Year</fullName>
                <isActive>false</isActive>
                <label>Tuition Fee 5th Year</label>
            </value>
            <value>
                <fullName>University Fee 1st Year</fullName>
                <isActive>false</isActive>
                <label>University Fee 1st Year</label>
            </value>
            <value>
                <fullName>University Fee 2nd Year</fullName>
                <isActive>false</isActive>
                <label>University Fee 2nd Year</label>
            </value>
            <value>
                <fullName>University Fee 3rd Year</fullName>
                <isActive>false</isActive>
                <label>University Fee 3rd Year</label>
            </value>
            <value>
                <fullName>University Fee 4th Year</fullName>
                <isActive>false</isActive>
                <label>University Fee 4th Year</label>
            </value>
            <value>
                <fullName>University Fee 5th Year</fullName>
                <isActive>false</isActive>
                <label>University Fee 5th Year</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>