force-app/main/default/objects/Student_Fee__c/fields/Fee_Year__c.field-meta.xml
<CustomField>
    <fullName>Fee_Year__c</fullName>
    <label>Fee Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Year</fullName>
            </value>
            <value>
                <fullName>2nd Year</fullName>
            </value>
            <value>
                <fullName>3rd Year</fullName>
            </value>
            <value>
                <fullName>4th Year</fullName>
            </value>
            <value>
                <fullName>5th Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>