force-app/main/default/objects/Student_Fee__c/fields/Guardian_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Mobile_Number__c</fullName>
    <label>Guardian Mobile Number</label>
    <type>Phone</type>
</CustomField>