force-app/main/default/objects/Student_Fee__c/fields/Hostel_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Due_Date__c</fullName>
    <description>Calculated Hostel Due Date</description>
    <formula>Date_of_Joining_Hostel__c  + 30</formula>
    <label>Hostel Due Date</label>
    <type>Date</type>
</CustomField>