force-app/main/default/objects/Student_Fee__c/fields/Hostel_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Late_Fee__c</fullName>
    <description>Every Day 200 Fine, REVA-103</description>
    <formula>IF(
NOT(ISBLANK(Student_Hostel_Fee__c)),
IF(
TODAY() &gt; Student_Hostel_Fee__r.Date_of_Joining_Hostel__c + 30,
200 * (TODAY() - Student_Hostel_Fee__r.Date_of_Joining_Hostel__c - 30),
0
),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hostel Late Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>