force-app/main/default/objects/Student_Fee__c/fields/Integration_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Integration_Remarks__c</fullName>
    <formula>CASE(
Integration_Remarks_Image__c, 

&apos;Red&apos;,IMAGE(&apos;https://chart.googleapis.com/chart?chst=d_text_outline&amp;chld=F96315|15|l|ffffff|_|To be Pushed&apos;,&apos;HOT&apos;),
&apos;Green&apos;,IMAGE(&apos;https://chart.googleapis.com/chart?chst=d_text_outline&amp;chld=006666|15|l|ffffff|_|Pushed Successfully&apos;,&apos;GREEN&apos;),
				NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integration Remarks</label>
    <type>Text</type>
</CustomField>