force-app/main/default/objects/Student_Fee__c/fields/Integration_Remarks_Image__c.field-meta.xml
<CustomField>
    <fullName>Integration_Remarks_Image__c</fullName>
    <formula>IF(Integrated_with_SAP__c = true,&apos;Green&apos;,&apos;Red&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integration Remarks Image</label>
    <type>Text</type>
</CustomField>