force-app/main/default/objects/Student_Fee__c/fields/Mother_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Mother_Email_ID__c</fullName>
    <label>Mother Email ID</label>
    <type>Email</type>
</CustomField>