force-app/main/default/objects/Student_Fee__c/fields/Mother_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mother_Mobile_Number__c</fullName>
    <label>Mother Mobile Number</label>
    <type>Phone</type>
</CustomField>