force-app/main/default/objects/Student_Fee__c/fields/No_of_Days_Due__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Due__c</fullName>
    <formula>TODAY() - Hostel_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>