force-app/main/default/objects/Student_Fee__c/fields/NPF_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>NPF_Checkbox__c</fullName>
    <formula>Contact__r.NPF__c  ||  Contact__r.NPF_Data__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPF Checkbox</label>
    <type>Checkbox</type>
</CustomField>