force-app/main/default/objects/Student_Fee__c/fields/NPF_or_NPF_Data_TRUE__c.field-meta.xml
<CustomField>
    <fullName>NPF_or_NPF_Data_TRUE__c</fullName>
    <formula>Contact__r.NPF__c || Contact__r.NPF_Data__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPF or NPF Data TRUE</label>
    <type>Checkbox</type>
</CustomField>