force-app/main/default/objects/Student_Fee__c/fields/Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Installments__c</fullName>
    <label>Number of times Payment Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>