force-app/main/default/objects/Student_Fee__c/fields/Paid_Installments__c.field-meta.xml
<CustomField>
    <fullName>Paid_Installments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Times Payments Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>