force-app/main/default/objects/Student_Fee__c/fields/Parent_Student_Fee__c.field-meta.xml
<CustomField>
    <fullName>Parent_Student_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Student Fee</label>
    <referenceTo>Student_Fee__c</referenceTo>
    <relationshipLabel>Student Fees</relationshipLabel>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>