force-app/main/default/objects/Student_Fee__c/fields/Payment_Mode_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode_Type__c</fullName>
    <label>Payment Mode Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>