force-app/main/default/objects/Student_Fee__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <description>Premium fee (if any) - 1st year</description>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>