force-app/main/default/objects/Student_Fee__c/fields/Premium_Room__c.field-meta.xml
<CustomField>
    <fullName>Premium_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Room</label>
    <type>Checkbox</type>
</CustomField>