force-app/main/default/objects/Student_Fee__c/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <formula>Contact__r.Program_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Batch</label>
    <type>Text</type>
</CustomField>