force-app/main/default/objects/Student_Fee__c/fields/Program_Batch_Active__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch_Active__c</fullName>
    <formula>Contact__r.Program_Batch__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Batch Active</label>
    <type>Checkbox</type>
</CustomField>