force-app/main/default/objects/Student_Fee__c/fields/Program_Batch_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch_Start_Year__c</fullName>
    <formula>LEFT(RIGHT(Program_Batch__c, 10), 4)</formula>
    <label>Program Batch Start Year</label>
    <type>Text</type>
</CustomField>