force-app/main/default/objects/Student_Fee__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Student Fees</relationshipLabel>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>