force-app/main/default/objects/Student_Fee__c/fields/Provisional_Admission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Admission_Fee__c</fullName>
    <label>Provisional Admission Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>