force-app/main/default/objects/Student_Fee__c/fields/Received_Source__c.field-meta.xml
<CustomField>
    <fullName>Received_Source__c</fullName>
    <label>Received Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual / Upload</fullName>
                <default>true</default>
                <label>Manual / Upload</label>
            </value>
            <value>
                <fullName>NPF</fullName>
            </value>
            <value>
                <fullName>Tally</fullName>
            </value>
            <value>
                <fullName>Logisys</fullName>
            </value>
            <value>
                <fullName>Student Requisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>