force-app/main/default/objects/Student_Fee__c/fields/Reva_Exam_Application__c.field-meta.xml
<CustomField>
    <fullName>Reva_Exam_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reva Exam Application</label>
    <referenceTo>Rve_Exam_Application__c</referenceTo>
    <relationshipLabel>Student Fees</relationshipLabel>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>