force-app/main/default/objects/Student_Fee__c/fields/Reva_Hostel_Room__c.field-meta.xml
<CustomField>
    <fullName>Reva_Hostel_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Hostel Room</label>
    <referenceTo>Reva_Hostel_Room__c</referenceTo>
    <relationshipLabel>Student Fees</relationshipLabel>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>