force-app/main/default/objects/Student_Fee__c/fields/Room_Sharing_Details__c.field-meta.xml
<CustomField>
    <fullName>Room_Sharing_Details__c</fullName>
    <label>Room Sharing Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>