force-app/main/default/objects/Student_Fee__c/fields/RTR_Transport_Registration__c.field-meta.xml
<CustomField>
    <fullName>RTR_Transport_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Registration</label>
    <referenceTo>Transport_Registeration__c</referenceTo>
    <relationshipLabel>Student Fees</relationshipLabel>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>