force-app/main/default/objects/Student_Fee__c/fields/Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Scholarship__c</fullName>
    <description>Scholarship - 1st year</description>
    <label>Scholarship</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>