force-app/main/default/objects/Student_Fee__c/fields/Scholarship_Categories__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Categories__c</fullName>
    <label>Scholarship Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REVA CET Scholarship</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>ICSE/CBSE Merit</fullName>
            </value>
            <value>
                <fullName>REVA to REVA</fullName>
            </value>
            <value>
                <fullName>State Board Merit</fullName>
            </value>
            <value>
                <fullName>REVA Merit</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>NCC</fullName>
            </value>
            <value>
                <fullName>Defence/Paramilitary</fullName>
            </value>
            <value>
                <fullName>Police Service</fullName>
            </value>
            <value>
                <fullName>Special Scholarship</fullName>
            </value>
            <value>
                <fullName>Early Decision Benefit</fullName>
            </value>
            <value>
                <fullName>Entrance Exam Based Scholarship</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>