force-app/main/default/objects/Student_Fee__c/fields/Scholarship_Category__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Category__c</fullName>
    <label>Scholarship Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>