force-app/main/default/objects/Student_Fee__c/fields/Scholarship_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Created_by__c</fullName>
    <label>Scholarship Created by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>