force-app/main/default/objects/Student_Fee__c/fields/Scholarship_Date__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Date__c</fullName>
    <label>Scholarship Date</label>
    <type>Date</type>
</CustomField>