force-app/main/default/objects/Student_Fee__c/fields/Scholarship_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Sub_Category__c</fullName>
    <label>Scholarship Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Scholarship_Categories__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PG - Others</fullName>
            </value>
            <value>
                <fullName>A+ Level</fullName>
            </value>
            <value>
                <fullName>A Level</fullName>
            </value>
            <value>
                <fullName>B Level</fullName>
            </value>
            <value>
                <fullName>UG - Technical</fullName>
            </value>
            <value>
                <fullName>UG - Non Technical</fullName>
            </value>
            <value>
                <fullName>PG - Technical</fullName>
            </value>
            <value>
                <fullName>C Level</fullName>
            </value>
            <value>
                <fullName>NCC - A &amp; B Certificate</fullName>
            </value>
            <value>
                <fullName>NCC - C Certificate</fullName>
            </value>
            <value>
                <fullName>Killed/Disabled in Action</fullName>
            </value>
            <value>
                <fullName>TSC/RDC/YEP</fullName>
            </value>
            <value>
                <fullName>Awarded for Gallantry</fullName>
            </value>
            <value>
                <fullName>Widows</fullName>
            </value>
            <value>
                <fullName>Working/Retired</fullName>
            </value>
            <value>
                <fullName>Specially Abled</fullName>
            </value>
            <value>
                <fullName>Siblings</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>Single Girl Child</fullName>
            </value>
            <value>
                <fullName>JEE - Percentile - B.Tech</fullName>
            </value>
            <value>
                <fullName>NATA - Score - B.Arch</fullName>
            </value>
            <value>
                <fullName>NEET - Score - B.Sc</fullName>
            </value>
            <value>
                <fullName>REVA Alumni Referral</fullName>
            </value>
            <value>
                <fullName>REVA Staff Referral</fullName>
            </value>
            <value>
                <fullName>REVA Vendor/ Supplier/Contractor/ Other Referrals</fullName>
            </value>
            <value>
                <fullName>B.Tech/B.Arch/MBA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>