force-app/main/default/objects/Student_Fee__c/fields/Seat_Blocking_Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Seat_Blocking_Payment_Option__c</fullName>
    <label>Seat Blocking Payment Option</label>
    <length>200</length>
    <type>Text</type>
</CustomField>