force-app/main/default/objects/Student_Fee__c/fields/Send_fee_remainder__c.field-meta.xml
<CustomField>
    <fullName>Send_fee_remainder__c</fullName>
    <formula>IF(Hostel_Due_Date__c &lt;= (TODAY() + 7), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send fee remainder</label>
    <type>Checkbox</type>
</CustomField>