force-app/main/default/objects/Student_Fee__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <length>100</length>
    <type>Text</type>
</CustomField>